--- a/package.json
+++ b/package.json
@@ -25,18 +25,16 @@
     "url": "https://github.com/Unibeautify/beautifier-js-beautify/issues"
   },
   "homepage": "https://github.com/Unibeautify/beautifier-js-beautify#readme",
-  "dependencies": {
+  "peerDependencies": {
     "js-beautify": "^1.7.5",
-    "unibeautify-beautifier": "^0.1.3"
+    "unibeautify": "^0.7.0"
   },
   "devDependencies": {
     "@types/js-beautify": "0.0.31",
     "@types/node": "^9.4.0",
     "ava": "^0.25.0",
+    "js-beautify": "^1.7.5",
     "typescript": "^2.6.2",
-    "unibeautify": "^0.4.0"
-  },
-  "peerDependencies": {
-    "unibeautify": "^0.4.0"
+    "unibeautify": "^0.7.0"
   }
 }
