--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "scripts": {
     "prepublishOnly": "npm run build",
     "build": "tsc",
-    "ava": "ava --verbose",
-    "test": "npm run ava"
+    "jest": "jest",
+    "test": "npm-run-all compile:ts lint jest",
+    "compile:ts": "tsc",
+    "lint": "tslint {src,test}/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -32,9 +34,15 @@
   "devDependencies": {
     "@types/js-beautify": "0.0.31",
     "@types/node": "^9.4.0",
-    "ava": "^0.25.0",
+    "@types/jest": "^22.1.2",
+    "jest": "^22.2.2",
+    "npm-run-all": "^3.1.0",
     "js-beautify": "^1.7.5",
     "typescript": "^2.6.2",
+    "ts-jest": "^22.0.4",
+    "tslint": "^5.7.0",
+    "tslint-clean-code": "^0.2.3",
+    "tslint-microsoft-contrib": "^5.0.1",
     "unibeautify": "^0.7.0"
   }
 }
