--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "@unibeautify/beautifier-js-beautify",
   "version": "0.3.0",
   "description": "JS-Beautify beautifier for Unibeautify",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "dist/src/index.js",
+  "typings": "dist/src/index.d.ts",
   "scripts": {
     "prepublishOnly": "npm run build",
-    "build": "tsc",
+    "build": "npm run clean && npm run compile",
+    "clean": "rimraf dist",
     "jest": "jest",
-    "test": "npm-run-all compile:ts lint jest",
-    "compile:ts": "tsc",
+    "test": "npm-run-all build lint jest",
+    "compile": "tsc",
     "lint": "tslint {src,test}/**/*.ts"
   },
   "repository": {
@@ -32,17 +33,22 @@
     "unibeautify": "^0.8.0"
   },
   "devDependencies": {
+    "@types/jest": "^22.1.2",
     "@types/js-beautify": "0.0.31",
     "@types/node": "^9.4.0",
-    "@types/jest": "^22.1.2",
+    "@types/read-pkg-up": "^3.0.1",
     "jest": "^22.2.2",
-    "npm-run-all": "^3.1.0",
     "js-beautify": "^1.7.5",
-    "typescript": "^2.6.2",
+    "npm-run-all": "^3.1.0",
+    "rimraf": "^2.6.2",
     "ts-jest": "^22.0.4",
     "tslint": "^5.7.0",
     "tslint-clean-code": "^0.2.3",
     "tslint-microsoft-contrib": "^5.0.1",
+    "typescript": "^2.6.2",
     "unibeautify": "^0.8.0"
+  },
+  "dependencies": {
+    "read-pkg-up": "^3.0.0"
   }
 }
