--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "homepage": "https://github.com/Unibeautify/beautifier-js-beautify#readme",
   "peerDependencies": {
     "js-beautify": "^1.7.5",
-    "unibeautify": "^0.10.1"
+    "unibeautify": ">= 0.9.x"
   },
   "devDependencies": {
     "@types/jest": "^22.2.0",
